@@ -24,7 +24,7 @@
     </select>
 
 
-    <a href="success.html" id="link_id" name="link_name" class="link_class" >Google Search</a>
+    <a href="success.html" id="link_id" name="link_name" class="link_class" title="link_title" >Google Search</a>
 
     <input id="cb_id" name="cb_name" class="cb_class" type="checkbox" value="1" />
 
